# conan-eigen3

./: .travis.yml  FindEigen3.cmake  Jenkinsfile  appveyor.yml  conanfile.py
test/: CMakeLists.txt  conanfile.py  main.cpp  main.h
